# datapoint-python

./: .binstar.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST  MANIFEST.in  Pipfile  README.md  conda.yaml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_26.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: lint.yaml  publish-to-pypi.yml  publish-to-test-pypi.yml  tests.yml
datapoint/: Day.py  Element.py  Forecast.py  Manager.py  Observation.py  Site.py  Timestep.py  __init__.py  _version.py  exceptions.py  profile.py
datapoint/regions/: RegionManager.py  region_names.py
docs/: about.md  about.rst  conf.py  getting-started.md  getting-started.rst  index.md  index.rst  install.md  install.rst  locations.rst  objects.md  objects.rst  requirements.txt
docs/objects/: day.md  element.md  forecast.md  index.md  manager.md  site.md  timestep.md
docs/source/: api-reference.rst  conf.py  getting-started.rst  index.rst  install.rst  migration.rst  objects.rst
examples/: README.md
examples/current_weather/: .current_weather.py.swp  README.md  current_weather.py
examples/do_i_need_an_umbrella/: do_i_need_an_umbrella.py
examples/postcodes_to_lat_lng/: README.md  postcodes_to_lat_lng.py
examples/simple_forecast/: README.md  simple_forecast.py
examples/text_forecast/: text_forecast.py
examples/tube_bike/: README.md  tube_bike.py
examples/umbrella/: README.md  umbrella.py
examples/washing/: README.md  washing.py
src/datapoint/: Forecast.py  (+4 more)
tests/: example_test.py
(+17 files in other folders)
